--- a/configs/resnet50.yaml
+++ b/configs/resnet50.yaml
@@ -4,8 +4,7 @@ MODEL:
     THRESHOLD: 0.25
     NAME: "resnet50"
     NUM_CLASSES: 5
-OUTPUT_DIR:
-    "outputs/resnet50_lr_3e2"
+OUTPUT_DIR: "outputs/resnet50"
 TRAINER:
     LR: 3e-2
 INPUT:
@@ -13,4 +12,6 @@ INPUT:
         RAND_GAUSS:
             ACTIVE: True
             INTENSITY: 0.35
+        LENGTH: 40960
+    RECORD_LENGTH: 40960
 ...
